<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/power_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/power_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/activity_main_power_label"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <ProgressBar
                    android:id="@+id/power_progress_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/power_label" />

                <TextView
                    android:id="@+id/power_label_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/power_progress_bar"
                    android:text="0"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/power_label_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/power_progress_bar"
                    android:text="2750"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/power_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/power_progress_bar"
                    android:layout_centerHorizontal="true"
                    android:text="Value"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_spacer_height" />

            <RelativeLayout
                android:id="@+id/today_prod_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/today_prod_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/activity_main_today_prod_label"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/today_prod_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="Value"
                    android:textAlignment="viewEnd"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/today_max_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/today_max_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/activity_main_today_max_label"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <LinearLayout
                    android:id="@+id/today_max_values_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:gravity="end"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/today_max_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Value"
                        android:textAlignment="viewEnd"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/today_max_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Value"
                        android:textAlignment="viewEnd"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/today_poweron_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/today_poweron_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/activity_main_today_poweron_label"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/today_poweron_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="Value"
                    android:textAlignment="viewEnd"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/today_poweroff_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/today_poweroff_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/activity_main_today_poweroff_label"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/today_poweroff_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="Value"
                    android:textAlignment="viewEnd"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_spacer_height" />

            <RelativeLayout
                android:id="@+id/yesterday_prod_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/yesterday_prod_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/activity_main_yesterday_prod_label"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/yesterday_prod_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="Value"
                    android:textAlignment="viewEnd"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/yesterday_max_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/yesterday_max_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/activity_main_yesterday_max_label"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <LinearLayout
                    android:id="@+id/yesterday_max_values_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:gravity="end"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/yesterday_max_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Value"
                        android:textAlignment="viewEnd"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/yesterday_max_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Value"
                        android:textAlignment="viewEnd"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/yesterday_poweron_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/yesterday_poweron_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/activity_main_yesterday_poweron_label"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/yesterday_poweron_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="Value"
                    android:textAlignment="viewEnd"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/yesterday_poweroff_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/yesterday_poweroff_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/activity_main_yesterday_poweroff_label"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/yesterday_poweroff_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="Value"
                    android:textAlignment="viewEnd"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_spacer_height" />

            <RelativeLayout
                android:id="@+id/today_voltage_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/today_voltage_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/activity_main_voltage_label"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/today_voltage_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="Value"
                    android:textAlignment="viewEnd"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/today_temp_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/today_temp_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/activity_main_temp_label"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/today_temp_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="Value"
                    android:textAlignment="viewEnd"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/today_frequency_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/today_frequency_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/activity_main_frequency_label"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/today_frequency_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="Value"
                    android:textAlignment="viewEnd"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_spacer_height" />

            <RelativeLayout
                android:id="@+id/lastcontact_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lastcontact_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/activity_main_lastcontact_label"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/lastcontact_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="Value"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
